<resources>
    <string name="app_name">potato-impl</string>
    <string name="connect_connection">Connection</string>
    <string name="connect_server">Server IP</string>
    <string name="connect_port">Port</string>
    <string name="connect_connect">Connect</string>
    <string name="connect_QR_connect">QR</string>
    <string name="connect_status">Connection Status</string>
    <string name="connect_test">Tap to test connection</string>
    <string name="connect_instruction"><u>Click here to read the user guide for this App.(from GitHub.com)</u></string>

    <string name="team_title">Teammates</string>
    <string name="enemy_title">Enemies</string>

    <string name="setting_title">Settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_animation">Animation</string>
    <string name="setting_author">Author</string>
    <string name="setting_author_detail">I am Vigroid. Looking for job now!</string>
    <string name="setting_icon_author">Icon Author</string>
    <string name="setting_icon_link">Icon made by Freepik from www.flaticon.com</string>
    <string name="setting_gitHub_page">GitHub Repo</string>
    <string name="setting_gitHub_page_link">https://github.com/Vigroid/PotatoDetector</string>
    <string name="setting_version">Version</string>
    <string name="setting_version_num">1.0</string>
    <string name="setting_about">About</string>
    <string name="setting_about_wows">Player rating is calculated by WOWS-numbers\'s PR formula.</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_privacy_link">http://vigroid.me/privacy-policy-for-wows-match-monitor/</string>

    <string-array name="language_array">
        <item>Auto</item>
        <item>English</item>
        <item>简体中文</item>
    </string-array>

    <string-array name="region_array">
        <item>ASIA</item>
        <item>EU</item>
        <item>NA</item>
        <item>RU</item>
    </string-array>

</resources>
