<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_connect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/navy_blue"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="6dp"
            android:text="@string/connect_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_connect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_connect">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/connect_upper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_connection"
                    android:textColor="@color/navy_blue"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_server_ip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/connect_server"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_port"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/connect_port"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">


                    <Button
                        android:id="@+id/button_connect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/connect_connect" />


                    <Button
                        android:id="@+id/button_disconnect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/connect_disconnect" />

                    <Button
                        android:id="@+id/button_QR_connect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/connect_QR_connect" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect_upper"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_status"
                    android:textColor="@color/navy_blue"
                    android:textSize="20sp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/tv_icon_status"
                    android:layout_width="wrap_content"
                    android:text="{fa-exclamation-triangle}"
                    android:textSize="100sp"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/button_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_test"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>